--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "magic-kingdom",
-  "version": "0.1.0",
+  "name": "line-buddy",
+  "version": "1.0.0",
+  "author": "Mary Knize",
+  "description": "View theme park wait times on a WebVR-enabled map",
+  "keywords": "theme park, disney, wait times, webvr, react, redux, a-frame, socket.io",
   "private": true,
   "scripts": {
     "start": "node ./index.js",
@@ -27,22 +30,13 @@
     "aframe-mouse-cursor-component": "^0.5.1",
     "aframe-orbit-controls-component-2": "^0.1.7",
     "aframe-react": "^4.2.4",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "browserify": "^14.4.0",
     "cron": "^1.1.0",
-    "debug": "~2.2.0",
     "express": "~4.13.4",
-    "jade": "~1.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "reactify": "^1.1.1",
     "redux": "^3.7.1",
-    "redux-immutable-state-invariant": "^2.0.0",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.2",
     "themeparks": "^4.1.5",
@@ -50,6 +44,11 @@
     "webpack": "^3.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1"
-  }
+  },
+  "license": "MIT"
 }
